--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  margin: 0;
+  padding: 0;
+}
+
+
 .overlay::before{
   content: " ";
   position: absolute;
@@ -16,3 +22,4 @@
 .text h1, p {
   z-index: 2;
 }
+
