--- a/app/globals.css
+++ b/app/globals.css
@@ -71,3 +71,20 @@ margin: 5px;
   width: 15%;
   margin: 8px auto;
 }
+.banner::before{
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 1;
+}
+.text-line-two::before{
+   content: '';
+  display: block;
+  border-top: 2px solid white;
+  width: 70%;
+  margin: 8px auto;
+}
